--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "captcha_key": "", 
-    "invite": "",
+    "invite": "https://discord.gg/bwvu2DNx5R",
     "threads": 69,
     "proxy_scraper": "y",
 
